perf: optimize PlaceholderHelper with lazy loading and caching
- Add lazy icon loading: icons loaded only on first show() call
- Add global pixmap cache to share scaled icons across instances
- Use Qt.FastTransformation instead of Qt.SmoothTransformation
- Expected improvement: ~50-100ms reduction in MainWindow init time
- Performance baseline tracked in scripts/profile_performance.py

Part of Phase 3: Performance Optimization

--- a/docs/2025_12_19.md
+++ b/docs/2025_12_19.md
@@ -1,8 +1,8 @@
 # Refactoring & Optimization Plan
 
-**Date:** 2025-12-19  
+**Date:** 2025-12-19 (Updated: 2025-12-20)  
 **Author:** AI Assistant  
-**Status:** DRAFT — Awaiting Review
+**Status:** IN PROGRESS — Phase 2 Complete
 
 ---
 
@@ -83,22 +83,27 @@ core/
 
 ### 2.2 Split God Classes
 
-#### 2.2.1 `unified_metadata_manager.py` (91KB) → 4 Modules
+#### 2.2.1 `unified_metadata_manager.py` (91KB) → 4 Modules ✅ COMPLETE
 
-| New Module | Responsibility |
-|------------|----------------|
-| `MetadataReader` | Load metadata from files using ExifTool |
-| `MetadataWriter` | Write/update metadata to files |
-| `MetadataCacheService` | In-memory and persistent cache operations |
-| `CompanionMetadataHandler` | Handle sidecar/companion file metadata |
+| New Module | Lines | Responsibility | Status |
+|------------|-------|----------------|--------|
+| `metadata_reader.py` | 289 | Load metadata from files using ExifTool | ✅ Done |
+| `metadata_writer.py` | 266 | Write/update metadata to files | ✅ Done |
+| `metadata_cache_service.py` | 120 | In-memory and persistent cache operations | ✅ Done |
+| `companion_metadata_handler.py` | 237 | Handle sidecar/companion file metadata | ✅ Done |
 
-#### 2.2.2 `event_handler_manager.py` (63KB) → 3 Modules
+**Location:** `oncutf/core/metadata/`
 
-| New Module | Responsibility |
-|------------|----------------|
-| `FileEventHandlers` | Browse, folder import, file operations |
-| `UIEventHandlers` | Context menus, header toggles, splitter moves |
-| `ContextMenuHandlers` | Right-click menu logic (currently ~400 lines in one method) |
+#### 2.2.2 `event_handler_manager.py` (63KB) → 3 Modules ✅ COMPLETE
+
+| New Module | Lines | Responsibility | Status |
+|------------|-------|----------------|--------|
+| `file_event_handlers.py` | 94 | Browse, folder import, file operations | ✅ Done |
+| `ui_event_handlers.py` | 154 | Header toggle, row clicks, double clicks | ✅ Done |
+| `context_menu_handlers.py` | 1169 | Right-click menu logic, bulk rotation, analysis | ✅ Done |
+
+**Location:** `oncutf/core/events/`  
+**Facade:** `event_handler_manager.py` reduced from 1528 to 171 lines
 
 ---
 
@@ -180,23 +185,51 @@ value = getattr(file_item, 'metadata', {}).get("Date", "")
 
 ## 5. Implementation Roadmap
 
-### Phase 1: Foundation (Days 1-2)
-- [ ] Implement global error boundary in `main.py`
-- [ ] Create subdirectory structure under `core/`
-- [ ] Run existing tests — ensure no regressions
+### Phase 1: Foundation ✅ COMPLETE
+- ✅ Implement global error boundary in `main.py` (commit `751871b6`)
+- ✅ Create subdirectory structure under `core/` — `core/metadata/` and `core/events/` created
+- ✅ Run existing tests — all tests passing
 
-### Phase 2: Core Refactoring (Days 3-6)
-- [ ] Split `unified_metadata_manager.py` into 4 modules
-- [ ] Split `event_handler_manager.py` into 3 modules
-- [ ] Update all imports
-- [ ] Run tests after each split
+**Commits:**
+- `751871b6` - feat: add global exception handler for improved error handling
 
-### Phase 3: Performance (Days 7-9)
+### Phase 2: Core Refactoring ✅ COMPLETE
+- ✅ Split `unified_metadata_manager.py` into 4 modules (91KB → 4 modules in `core/metadata/`)
+  - `metadata_reader.py` (289 lines) - Load metadata from files using ExifTool
+  - `metadata_writer.py` (266 lines) - Write/update metadata to files  
+  - `metadata_cache_service.py` (120 lines) - In-memory and persistent cache operations
+  - `companion_metadata_handler.py` (237 lines) - Handle sidecar/companion file metadata
+- ✅ Split `event_handler_manager.py` into 3 modules (1528 → 171 lines facade)
+  - `file_event_handlers.py` (94 lines) - Browse, folder import handlers
+  - `ui_event_handlers.py` (154 lines) - Header toggle, row clicks, double clicks
+  - `context_menu_handlers.py` (1169 lines) - Right-click menu, bulk rotation, analysis
+- ✅ Update all imports — backward compatibility maintained
+- ✅ Run tests after each split — all passing
+- ✅ Fix all linting issues (ruff, mypy)
+
+**Commits:**
+- `7a21f0e2` - feat: extract 3 modules from unified_metadata_manager (Phase 2 WIP)
+- `30341766` - feat: Phase 2 integration - delegate cache methods to modules
+- `4112921d` - feat: complete writer delegation (save methods + cancel)
+- `7607b2b0` - feat: delegate companion methods to handler
+- `ce4e3394` - Fix mypy: silence Qt attribute typing and untyped call
+- `b9419edf` - fix: improve type annotations in metadata writer and companion handler
+- `d4d9bf23` - Merge branch 'refactor/phase2-split-metadata-manager'
+- `a372c382` - feat: split event_handler_manager into 3 modules (Phase 2)
+- `cb87d805` - chore: fix all ruff linting errors
+
+**Results:**
+- `unified_metadata_manager.py`: 91KB → delegated to 4 modules (912 lines total)
+- `event_handler_manager.py`: 1528 lines → 171 lines (facade only)
+- Total reduction: ~1500 lines moved to specialized modules
+- All tests passing (292 source files, 0 mypy errors, 0 ruff errors)
+
+### Phase 3: Performance (Planned)
 - [ ] Profile startup time
 - [ ] Optimize cache strategy
 - [ ] Add debouncing where missing
 
-### Phase 4: Polish (Days 10-12)
+### Phase 4: Polish (Planned)
 - [ ] Add defensive programming patterns
 - [ ] Fix Qt object lifecycle issues
 - [ ] Final testing and documentation
