refactor(phase4): organize core/selection subdirectory (9/10 - 90%)
- Created oncutf/core/selection/ subdirectory
- Moved 2 modules: selection_manager.py, selection_store.py
- Created __init__.py with proper exports
- Updated 3 imports across 2 files:
  * core/initialization/initialization_orchestrator.py (1 import)
  * core/application_context.py (2 imports)
- All tests passing (866/866)
- Ruff clean

--- a/docs/2025_12_19.md
+++ b/docs/2025_12_19.md
@@ -78,7 +78,7 @@ core/
 │   ├── metadata_writer.py
 │   ├── metadata_cache_service.py
 │   └── companion_handler.py
-├── rename/                   # Rename operations
+├── rename/                   # Rename operations ✅
 │   ├── rename_manager.py
 │   ├── rename_history_manager.py
 │   └── unified_rename_engine.py
